Add S3 upload and Donwload
On enlève le docker pour l'instant.
Implémentation du S3 d'AWS pour l'upload et le download de documents (factures et devis)